# probelib

./: .gitignore  CLAUDE.md  benchmark_api_proposal.md  pyproject.toml
benchmarks/: masks_benchmark.py  probe_benchmark.py  tokenization_benchmark.py  utils.py
docs/: use_cases.md
perf_checks/: masks_benchmark.py  probe_benchmark.py  score_benchmark.py  tokenization_benchmark.py
probelib/: __init__.py  metrics.py  visualization.py
probelib/datasets/: base.py  harmfulness.py
probelib/integrations/: __init__.py  dialogue_conversion.py
probelib/models/: architectures.py  hooks.py
probelib/probes/: __init__.py  attention.py  base.py  logistic.py  mlp.py
probelib/processing/: __init__.py  activations.py  tokenization.py
probelib/scripts/: workflows.py
tests/: test_edge_cases.py  test_metrics.py
tests/integration/: test_collect_activations_correctness.py
tests/integrations/: __init__.py
tests/probes/: test_attention.py  test_base_probe.py  test_empty_batch_handling.py  test_logistic.py  test_mlp.py
tests/processing/: test_activations.py
