[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "probelib"
version = "0.1.0"
description = "A library for training activation monitors on language models."
readme = "README.md"
authors = [{ name = "Alex Serrano", email = "alex.serrano.terre@gmail.com" }]
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.10.0",
    "datasets>=3.6.0",
    "einops>=0.8.1",
    "hf-transfer>=0.1.9",
    "jaxtyping>=0.3.2",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "tabulate>=0.9.0",
    "torch>=2.7.1",
    "torch-geometric>=2.5.0",
    "transformers>=4.55.4",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "huggingface-hub>=0.33.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "pre-commit>=4.3.0",
    "python-dotenv>=1.1.1",
    "pytest-cov>=6.2.1",
    "py-spy>=0.4.1",
]

[tool.ruff]
lint.ignore = ["F722", "F821"] # ignores forward annotation error in jaxtyping

[tool.ty.rules]
invalid-syntax-in-forward-annotation = "ignore"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks integration tests (GPU heavy)",
    "llama3: tests that run against LLaMA 3 models/tokenizers",
    "gemma2: tests that run against Gemma 2 models/tokenizers",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
